Fix responsive layout issues

--- a/src/styles/month.scss
+++ b/src/styles/month.scss
@@ -14,13 +14,14 @@ $font-size-xs: .7rem;
     }
   }
 
-  .btn-default img{
+
+  .btn-default img {
     margin: 0;
     height: 32px;
     width: 32px;
   }
 
-  button{
+  button {
     box-shadow: none;
   }
 
@@ -39,8 +40,8 @@ $font-size-xs: .7rem;
     border-left: $border-style;
   }
 
-  .col.day.splurge, .col.day-totals.splurge{
-    .spent button, .money{
+  .col.day.splurge, .col.day-totals.splurge {
+    .spent button, .money {
       color: #ed4a52;
     }
   }
@@ -49,10 +50,15 @@ $font-size-xs: .7rem;
   .col.day-totals {
     text-align: center;
     border-bottom: none;
-    padding: 14px 20px;
+    padding: 0;
     font-size: 1rem;
 
-    img{
+    .btn{
+      padding: 0;
+      margin-top: 23px;
+    }
+
+    img {
       height: 32px;
       width: 32px;
     }
@@ -61,11 +67,11 @@ $font-size-xs: .7rem;
       padding: 24px;
     }
 
-    span{
+    span {
       font-size: .9rem;
     }
 
-    button{
+    button {
       border: none;
     }
 
@@ -111,7 +117,7 @@ $font-size-xs: .7rem;
     button {
       border: none;
       color: darkgreen;
-      padding: 16px;
+      padding: 0;
       background: none;
     }
 
@@ -133,9 +139,10 @@ $font-size-xs: .7rem;
     padding: 0;
     text-align: left;
     font-size: .85rem;
+    margin-left: 4px;
   }
 
-  .date{
+  .date {
     padding: 2px;
     font-size: .8rem;
   }
@@ -144,20 +151,30 @@ $font-size-xs: .7rem;
     height: 72px;
   }
 
-  .day .spent button{
-    padding: 0;
+  .day .spent button {
+    //padding: 0;
     font-size: $font-size-xs;
   }
 
   .month-container {
     .col.day, .col.day-totals {
       width: $col-width-xs;
-      padding: 0;
       font-size: $font-size-xs;
+      .spent{
+        margin-top: 10px;
+      }
+
+      .btn{
+        padding: 0;
+      }
+
+      span {
+        font-size: .7rem;
+      }
     }
 
-    .col.day-totals{
-      margin-top: 20px;
+    .col.day-totals {
+      margin-top: 23px;
     }
   }
 
@@ -167,7 +184,7 @@ $font-size-xs: .7rem;
     margin: 1px;
     height: 564px;
   }
-  .month-container{
+  .month-container {
     padding: 5px 0;
   }
 }
